first version of angular data

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="app-boilerplate">
+<html data-ng-app="app-boilerplate">
     <head>
         <title>Application Boilerplate</title>
         <meta charset="utf-8" />
