--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html ng-app="app-boilerplate">
+<html data-ng-app="app-boilerplate">
     <head>
         <title>Application Boilerplate</title>
         <meta charset="utf-8" />
 
         <!-- Stylesheets -->
+        <link rel="stylesheet" href="css/vendor.css" />
         <link rel="stylesheet" href="css/main.css" />
     </head>
     <body>
