--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,27 +5,11 @@
         <meta charset="utf-8" />
 
         <!-- Stylesheets -->
-        <link rel="stylesheet" href="css/vendor.css" />
         <link rel="stylesheet" href="css/main.css" />
     </head>
     <body>
 
-        <div class="ui tiered menu">
-            <div class="ui inverted menu">
-
-                <span class="item">
-                    <span class="application-title">Application Boilerplate</span>
-                </span>
-
-                <a class="active item">
-                    <i class="home icon"></i> Home
-                </a>
-            </div>
-
-            <div class="ui sub menu">
-                <a class="active item">About Application Boilerplate</a>
-            </div>
-        </div>
+        <div data-ng-view></div>
 
         <!-- Scripts -->
         <script type="text/javascript" src="js/vendor.js"></script>
